<resources>
    <string name="_101_iban_whatsnew">Transfers to IBAN are now available in application.</string>
    <string name="_101_iban_whatsnew_header">New account format</string>
    <string name="_102_number_title">Account number</string>
    <string name="_103_number_conditions">From 6 up to 14 characters.</string>
    <string name="_104_iban_title">IBAN</string>
    <string name="_105_iban_conditions">IBAN length - 29 characters.</string>
    <string name="_106_iban_incorrect">IBAN is incorrect, please check entered data.</string>
    <string name="_107_fields_select_placeholder">Select value</string>
    <string name="_109_fields_counter_current">Current</string>
    <string name="_10_reset_app_pass_temp_pass_text">Please enter code you received by SMS.</string>
    <string name="_110_fields_counter_previous">Previous</string>
    <string name="_111_fields_counter_total">Total:</string>
    <string name="_112_fields_error_current_less_than_previous">Current metering is less than previous</string>
    <string name="_113_fields_select_none">None</string>
    <string name="_115_fields_combobox_unable_to_select">Unable to select option</string>
    <string name="_116_fields_combobox_unable_to_load">Error happened during loading options</string>
    <string name="_121_hh_template_all_categories">All services</string>
    <string name="_122_hh_template_my_services">My services</string>
    <string name="_123_hh_template_no_templates">"You don't have any templates yet"</string>
    <string name="_124_hh_template_get_templates_error_android">Error occurred while getting a template list</string>
    <string name="_126_whats_new_utility_payments">You can pay for utility services in app now. Available on Services tab.</string>
    <string name="_136_fingerprint_auth_alt_pin_midtitle">Your Fingerprint has been saved.</string>
    <string name="_137_fingerprint_auth_alt_pin_subtitle">"For a quick login to \"PUMB Online\"
use Fingerprint"</string>
    <string name="_138_fingerprint_auth_alt_touch_create">"Activate 
Fingerprint"</string>
    <string name="_139_fingerprint_auth_alt_touch_created">"Fingerprint 
activated"</string>
    <string name="_140_fingerprint_auth_alt_later_desc_touch_info">and Fingerprint</string>
    <string name="_141_fingerprint_auth_alt_subtitle_additional">"Use Fingerprint for a quick 
login to PUMB Online"</string>
    <string name="_142_fingerprint_auth_touch_creation_title">Fingerprint login</string>
    <string name="_143_fingerprint_whats_new_2_description">You can adjust login by Fingerprint and change login PIN for application. For adjustments go to \"Other\" menu.</string>
    <string name="_144_fingerprint_other_enable_touch">Use Fingerprint to login</string>
    <string name="_145_fingerprint_other_touch_alert">Are you sure you want to disable login using Fingerprint??</string>
    <string name="_146_hh_template_save_template_changes">Save template changes</string>
    <string name="_147_fingerprint_auth_alt_pin_header">Thank you!</string>
    <string name="_148_hh_list_services">Services</string>
    <string name="_149_hh_list_pay_for_address">Addresses</string>
    <string name="_150_hh_list_pay_for_services">Services</string>
    <string name="_151_hh_list_add_address">Add address</string>
    <string name="_152_hh_list_no_addresses">"Add your address.
You will be able to pay for utilities added to the address easier and faster."</string>
    <string name="_155_hh_new_header">Add address</string>
    <string name="_156_hh_new_name">Household name</string>
    <string name="_157_hh_new_name_placeholder">Enter household name</string>
    <string name="_158_hh_new_settlement_name">Locality</string>
    <string name="_159_hh_new_settlement_name_placeholder">Select value</string>
    <string name="_160_hh_new_street_name">Street</string>
    <string name="_161_hh_new_street_name_placeholder">Select street</string>
    <string name="_162_hh_new_house">House</string>
    <string name="_163_hh_new_block">Building</string>
    <string name="_164_hh_new_appartment">Apartment</string>
    <string name="_165_hh_new_house_hint">Example: 2 or 2/2a</string>
    <string name="_166_hh_new_save">Save</string>
    <string name="_167_hh_new_add_services">Add services</string>
    <string name="_168_hh_new_my_services">Add your services</string>
    <string name="_169_hh_list_my_addresses">My addresses</string>
    <string name="_16_reset_app_pass_card_number_cvv_message_body">Please enter card number and CVV code to continue.</string>
    <string name="_170_hh_list_my_address_templates">Services of address</string>
    <string name="_178_whats_new_hh_templates">Now you can save service you paid for as a template and use it in the My services list on the Services tab</string>
    <string name="_179_whats_new_hh_templates_title">Save to My services</string>
    <string name="_180_whats_new_hh_templates_try">Try it now</string>
    <string name="_195_hh_new_name_length_error">Enter 3–25 symbols</string>
    <string name="_198_hh_delete_title">Delete</string>
    <string name="_19_reset_app_pass_card_number_message_body">Please enter valid card number.</string>
    <string name="_200_hh_details_btn">Details</string>
    <string name="_201_hh_delete_body">Are you sure want to delete selected address “%s”?</string>
    <string name="_202_push_sys_perm_disabled_alert">Push-notifications are prohibited in your device settings</string>
    <string name="_203_push_sys_perm_disabled_open">Settings</string>
    <string name="_205_push_ask_to_enable_alert">Now you can receive and view the entire history of push notifications on transactions on accounts and cards using the application</string>
    <string name="_207_push_alert_cancel">Cancel</string>
    <string name="_208_push_ask_to_disable_alert">Your device does not support notifications. Disable Push-notifications on your previous device?</string>
    <string name="_211_push_ask_to_both_alert">Enable Push-notifications on this device and disable on your previous device?</string>
    <string name="_214_push_deactivate_another_alert">Are you sure you want to disable Push-notifications on another device?</string>
    <string name="_215_push_alert_disable">Disable</string>
    <string name="_217_push_deactivate_another_category">Disable Push-notifications on another devices</string>
    <string name="_218_push_on_off_toggle_title">Push notifications</string>
    <string name="_219_push_notification_channel_category">Account and Card Transactions</string>
    <string name="_21_reset_app_pass_card_cvv_info_header">Where to find CVV</string>
    <string name="_221_iban_only_template_message">You can only use IBAN in transfers due to NBU requirements. Please enter receiver IBAN.</string>
    <string name="_223_iban_only_template_message_header">Change template</string>
    <string name="_225_hh_add_service_to_hh">Save service</string>
    <string name="_226_hh_added_service_to_hh">Service saved</string>
    <string name="_227_hh_list_no_addresses_add_template">"You don't have any addresses yet"</string>
    <string name="_228_hh_add_service_to_hh_subtitle">Add services you pay for to selected address</string>
    <string name="_228_hh_add_service_to_hh_title">Add service</string>
    <string name="_229_hh_add_template_to_hh_alert_title">Add service</string>
    <string name="_22_reset_app_pass_card_cvv_info_body">CVV code is three digits code, that can be found on reverse side of a card.</string>
    <string name="_230_hh_add_template_to_hh_alert_subtitle" formatted="false">Do you want to add “%s” to the address “%s”?</string>
    <string name="_231_hh_add_template_to_hh_alert_btn_ok">Add</string>
    <string name="_232_hh_add_template_to_hh_alert_btn_cancel">Cancel</string>
    <string name="_235_hh_add_template_to_address">Add to address</string>
    <string name="_237_push_sys_perm_disabled_alert_title">Notification settings</string>
    <string name="_238_push_alert_title">Push-notifications</string>
    <string name="_242_hh_delete_error_subtitle">An error occurred. Retry?</string>
    <string name="_243_hh_delete_error_retry_btn">Retry</string>
    <string name="_245_hh_whats_new">From now, you can add your addresses and link utilities to them. This will allow you to handle your households in a more efficient way.</string>
    <string name="_246_hh_whats_new_header">Household utility payments</string>
    <string name="_249_hh_list_templates_to_add_hh">Add from your services list</string>
    <string name="_252_hh_add_template_done_btn_android">To the main page</string>
    <string name="_253_hh_new_service_name">Service name</string>
    <string name="_254_hh_list_my_addresses_android">My address</string>
    <string name="_255_ce_start_flow_button_header">Currency exchange</string>
    <string name="_256_ce_start_flow_button_description">Instant purchase, sell, currency exchange operations</string>
    <string name="_257_ce_calc_header">Currency exchange</string>
    <string name="_258_ce_calc_sale">Sell</string>
    <string name="_259_ce_calc_purchase">Buy</string>
    <string name="_260_ce_calc_limit">Limit: %s ₴</string>
    <string name="common_pumb_word">PUMB</string>
    <string name="common_receiver_name">Name and surname / company title</string>
    <string name="fraud_rules_type_selection_info_text1">Select countries where you will use payment card in \"Countries\" menu.</string>
    <string name="fraud_rules_type_selection_info_text2">Choose \"World-wide\" to use the payment card everywhere in the world.</string>
    <string name="fraud_rules_type_selection_info_text3">Choose \"Europe\" to enable operations in currencies of European countries.</string>
    <string name="fraud_rules_type_selection_info_title">How to set a permission:</string>
    <string name="main_card_account_credit_info_credit_limit">Credit line</string>
    <string name="main_card_account_credit_info_current_debt">Current overdue debt</string>
    <string name="main_card_account_credit_info_debt">Debt till the end of the grace period</string>
    <string name="main_card_account_credit_info_min_payment">Minimum payment</string>
    <string name="main_card_account_credit_info_over_limit">Lending limit exceeded</string>
    <string name="main_card_account_credit_info_title">Credit line information</string>
    <string name="main_card_account_credit_info_total_debt">Total debt amount</string>
    <string name="main_card_account_credit_info_used_amount">Used credit line</string>
    <string name="main_card_account_details_number">Account number</string>
    <string name="optional_backdrop_view_tag">optional_backdrop</string>
    <string name="optional_children_layout_trigger_view_tag">trigger</string>
    <string name="tag_transfer_setup_payment">payment purpose transfer setup</string>
    <string name="tag_transfer_valid_mfo">mfo transfer valid</string>
    <string name="tag_transfer_valid_passport">passport transfer valid</string>
    <string name="tag_transfer_valid_taxId">tax id transfer valid</string>
    <string name="transfer_to_selector_account">@string/transfer_to_acc_label</string>
    <string name="transfer_to_selector_cancel">Close</string>
    <string name="transfer_to_selector_card">@string/transfer_to_card_label</string>
    <string name="transfer_to_selector_label">Select destination for money transfer</string>
    <string name="transfers_empty_list_label">You do not have cards/accounts in a selected currency</string>
    <string name="transfers_input_hint_dst_acc">Specify the account number</string>
    <string name="transfers_internal_from_summary">Source</string>
    <string name="transfers_mfo_label">MFO of the bank</string>
    <string name="transfers_payment_purpose">Details of payment</string>
    <string name="transfers_receivers_passport">Passport series and number</string>
    <string name="transfers_receivers_personal_code">Tax ID / NSRUEO</string>
</resources>