<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:padding="@dimen/_24dp" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fraud_rules_type_selection_info_title" android:maxLines="4" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/GilroyTitle" />
    <TextView android:textColor="@color/default_secondary_text_color" android:id="@id/info1" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/fraud_rules_type_selection_info_text1" android:maxLines="4" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/title" style="@style/GilroyMedium" />
    <TextView android:textColor="@color/default_secondary_text_color" android:id="@id/info2" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/fraud_rules_type_selection_info_text2" android:maxLines="4" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/info1" style="@style/GilroyMedium" />
    <TextView android:textColor="@color/default_secondary_text_color" android:id="@id/info3" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/fraud_rules_type_selection_info_text3" android:maxLines="4" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/info2" style="@style/GilroyMedium" />
</androidx.constraintlayout.widget.ConstraintLayout>