<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/drawable_acc_card_bg" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.facebook.shimmer.ShimmerFrameLayout android:id="@id/shimmer_account_bank_name" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginEnd="@dimen/_16dp" app:layout_constraintBottom_toBottomOf="@id/image_bank_logo" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="@id/image_bank_logo" app:layout_constraintTop_toTopOf="@id/image_bank_logo" app:shimmer_duration="1000">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <View android:id="@id/shimmer_part_image" android:background="@drawable/bg_shimmer_account_bank_logo" android:layout_width="30.0dip" android:layout_height="30.0dip" />
            <androidx.appcompat.widget.AppCompatTextView android:layout_gravity="center_vertical" android:background="@drawable/bg_shimmer_account_text" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="@dimen/_8dp" android:layout_marginEnd="@dimen/_16dp" />
        </LinearLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>
    <androidx.appcompat.widget.AppCompatImageView android:id="@id/image_bank_logo" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="36.0dip" android:scaleType="fitStart" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/ic_pumb_logo_card" />
    <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/black" android:gravity="end" android:id="@id/title_pumb" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/common_pumb_word" android:layout_marginStart="140.0dip" android:layout_marginEnd="@dimen/_16dp" app:layout_constraintBottom_toBottomOf="@id/image_bank_logo" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="@id/image_bank_logo" app:layout_constraintTop_toTopOf="@id/image_bank_logo" style="@style/GilroyMedium" />
    <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/palette_stas_vertiy_grey_50" android:id="@id/acc_number_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_12dp" android:text="@string/main_card_account_details_number" android:layout_marginStart="8.0dip" app:layout_constraintTop_toBottomOf="@id/image_bank_logo" style="@style/GilroySmall" />
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/_16dp" android:id="@id/text_acc_number" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_1dp" android:layout_marginStart="8.0dip" app:layout_constraintTop_toBottomOf="@id/acc_number_title" style="@style/TransferItemOtherBankText" />
    <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/palette_stas_vertiy_grey_50" android:id="@id/dst_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_8dp" android:text="@string/common_receiver_name" android:layout_marginStart="8.0dip" app:layout_constraintTop_toBottomOf="@id/text_acc_number" style="@style/GilroySmall" />
    <com.facebook.shimmer.ShimmerFrameLayout android:id="@id/shimmer_text_receiver" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="@id/text_receivers_name" app:layout_constraintEnd_toEndOf="@id/dst_title" app:layout_constraintStart_toStartOf="@id/dst_title" app:layout_constraintTop_toTopOf="@id/text_receivers_name">
        <androidx.appcompat.widget.AppCompatTextView android:id="@id/text_receivers_name_shimmer_part" android:background="@drawable/bg_shimmer_account_text" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    </com.facebook.shimmer.ShimmerFrameLayout>
    <androidx.appcompat.widget.AppCompatTextView android:gravity="start|center" android:id="@id/text_receivers_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_1dp" android:layout_marginStart="8.0dip" app:layout_constraintTop_toBottomOf="@id/dst_title" style="@style/TransferItemOtherBankText" />
    <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/palette_stas_vertiy_grey_50" android:id="@id/mfo_title" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_8dp" android:text="@string/transfers_mfo_label" android:layout_marginStart="8.0dip" app:layout_constraintTop_toBottomOf="@id/text_receivers_name" style="@style/GilroySmall" />
    <androidx.appcompat.widget.AppCompatTextView android:gravity="start|center" android:id="@id/text_mfo" android:tag="@string/tag_transfer_valid_mfo" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_1dp" android:layout_marginStart="8.0dip" app:layout_constraintTop_toBottomOf="@id/mfo_title" style="@style/TransferItemOtherBankText" />
    <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/palette_stas_vertiy_grey_50" android:id="@id/personal_code_title" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_8dp" android:text="@string/transfers_receivers_personal_code" android:layout_marginStart="8.0dip" app:layout_constraintTop_toBottomOf="@id/text_mfo" style="@style/GilroySmall" />
    <androidx.appcompat.widget.AppCompatTextView android:gravity="start|center" android:id="@id/text_personal_code" android:tag="@string/tag_transfer_valid_taxId" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_1dp" android:layout_marginStart="8.0dip" app:layout_constraintTop_toBottomOf="@id/personal_code_title" style="@style/TransferItemOtherBankText" />
    <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/palette_stas_vertiy_grey_50" android:id="@id/passport_title" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_8dp" android:text="@string/transfers_receivers_passport" android:layout_marginStart="8.0dip" app:layout_constraintTop_toBottomOf="@id/text_personal_code" style="@style/GilroySmall" />
    <androidx.appcompat.widget.AppCompatTextView android:gravity="start|center" android:id="@id/text_passport" android:tag="@string/tag_transfer_valid_passport" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_1dp" android:layout_marginStart="8.0dip" app:layout_constraintTop_toBottomOf="@id/passport_title" style="@style/TransferItemOtherBankText" />
    <androidx.appcompat.widget.AppCompatTextView android:textColor="@color/palette_stas_vertiy_grey_50" android:id="@id/payment_purpose_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_8dp" android:text="@string/transfers_payment_purpose" android:layout_marginStart="8.0dip" app:layout_constraintTop_toBottomOf="@id/text_passport" style="@style/GilroySmall" />
    <androidx.appcompat.widget.AppCompatTextView android:gravity="start|center" android:id="@id/text_payment_purpose" android:tag="@string/tag_transfer_setup_payment" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_1dp" android:layout_marginStart="8.0dip" app:layout_constraintTop_toBottomOf="@id/payment_purpose_title" style="@style/TransferItemOtherBankText" />
</androidx.constraintlayout.widget.ConstraintLayout>