<?xml version="1.0" encoding="utf-8"?>
<merge android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/_4dp"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:background="@color/default_bg_color" android:padding="@dimen/_16dp" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <FrameLayout android:id="@id/container_arrow" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_12dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent">
            <androidx.appcompat.widget.AppCompatImageView android:id="@id/arrow_to_bottom" android:tag="@string/optional_children_layout_trigger_view_tag" android:paddingTop="8.0dip" android:paddingBottom="@dimen/_8dp" android:layout_width="36.0dip" android:layout_height="24.0dip" app:srcCompat="@drawable/ic_arrow_to_bottom_grey" />
            <androidx.appcompat.widget.AppCompatImageView android:id="@id/arrow_to_top" android:tag="@string/optional_children_layout_trigger_view_tag" android:paddingTop="8.0dip" android:paddingBottom="@dimen/_8dp" android:layout_width="36.0dip" android:layout_height="24.0dip" app:srcCompat="@drawable/ic_arrow_to_top_red" />
        </FrameLayout>
        <androidx.appcompat.widget.AppCompatTextView android:id="@id/title" android:paddingBottom="@dimen/_4dp" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/main_card_account_credit_info_title" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="@id/container_arrow" app:layout_constraintEnd_toStartOf="@id/container_arrow" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/container_arrow" style="@style/GilroyTitle" />
        <androidx.appcompat.widget.AppCompatTextView android:id="@id/min_payment_head" android:text="@string/main_card_account_credit_info_min_payment" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toStartOf="@id/min_payment_value" app:layout_constraintStart_toStartOf="@id/title" app:layout_constraintTop_toTopOf="@id/min_payment_value" style="@style/CreditInfoDetailsHead" />
        <androidx.appcompat.widget.AppCompatTextView android:id="@id/min_payment_value" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/title" style="@style/CreditInfoDetailsValue" />
        <androidx.appcompat.widget.AppCompatTextView android:id="@id/credit_limit_head" android:text="@string/main_card_account_credit_info_credit_limit" app:layout_constraintEnd_toStartOf="@id/credit_limit_value" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/credit_limit_value" style="@style/CreditInfoDetailsSmallHead" />
        <androidx.appcompat.widget.AppCompatTextView android:id="@id/credit_limit_value" android:layout_marginTop="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/min_payment_value" style="@style/CreditInfoDetailsSmallValue" />
        <androidx.appcompat.widget.AppCompatTextView android:id="@id/used_amount_head" android:text="@string/main_card_account_credit_info_used_amount" app:layout_constraintEnd_toStartOf="@id/used_amount_value" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/used_amount_value" style="@style/CreditInfoDetailsSmallHead" />
        <androidx.appcompat.widget.AppCompatTextView android:id="@id/used_amount_value" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/credit_limit_head" style="@style/CreditInfoDetailsSmallValue" />
        <View android:id="@id/divider_min_payment" app:layout_constraintTop_toBottomOf="@id/used_amount_head" style="@style/CreditInfoDivider" />
        <androidx.appcompat.widget.AppCompatTextView android:id="@id/debt_head" android:text="@string/main_card_account_credit_info_debt" app:layout_constraintEnd_toStartOf="@id/debt_value" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/debt_value" style="@style/CreditInfoDetailsHead" />
        <androidx.appcompat.widget.AppCompatTextView android:id="@id/debt_value" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/divider_min_payment" style="@style/CreditInfoDetailsValue" />
        <View android:id="@id/divider_debt" app:layout_constraintTop_toBottomOf="@id/debt_head" style="@style/CreditInfoDivider" />
        <androidx.appcompat.widget.AppCompatTextView android:id="@id/total_debt_head" android:text="@string/main_card_account_credit_info_total_debt" app:layout_constraintEnd_toStartOf="@id/total_debt_value" app:layout_constraintStart_toStartOf="@id/title" app:layout_constraintTop_toTopOf="@id/total_debt_value" style="@style/CreditInfoDetailsHead" />
        <androidx.appcompat.widget.AppCompatTextView android:id="@id/total_debt_value" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/divider_debt" style="@style/CreditInfoDetailsValue" />
        <androidx.appcompat.widget.AppCompatTextView android:id="@id/current_debt_head" android:text="@string/main_card_account_credit_info_current_debt" app:layout_constraintEnd_toStartOf="@id/current_debt_value" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/current_debt_value" style="@style/CreditInfoDetailsSmallHead" />
        <androidx.appcompat.widget.AppCompatTextView android:id="@id/current_debt_value" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/total_debt_head" style="@style/CreditInfoDetailsSmallValue" />
        <androidx.appcompat.widget.AppCompatTextView android:id="@id/over_limit_head" android:text="@string/main_card_account_credit_info_over_limit" app:layout_constraintEnd_toStartOf="@id/over_limit_value" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/over_limit_value" style="@style/CreditInfoDetailsSmallHead" />
        <androidx.appcompat.widget.AppCompatTextView android:id="@id/over_limit_value" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/current_debt_head" style="@style/CreditInfoDetailsSmallValue" />
        <View android:id="@id/divider_debt_sum" app:layout_constraintTop_toBottomOf="@id/over_limit_head" style="@style/CreditInfoDivider" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</merge>