<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/_14dp" android:textColor="@color/default_main_text_color" android:id="@id/text_acc_number_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_8dp" android:text="@string/_102_number_title" android:paddingStart="4.0dip" app:layout_constraintBottom_toTopOf="@id/input_dst_number" app:layout_constraintStart_toStartOf="parent" />
    <com.fuib.android.spot.presentation.tab.transfers.DestinationInputView android:theme="@style/AccountWidgetEditText" android:enabled="true" android:textSize="@dimen/_16sp" android:id="@id/input_dst_number" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/transfers_input_hint_dst_acc" android:maxLength="14" android:digits="\ 0123456789" android:inputType="number" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="12.0sp" android:textColor="@color/default_main_text_color" android:id="@id/text_acc_number_length_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/_103_number_conditions" android:paddingStart="4.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/input_dst_number" />
</androidx.constraintlayout.widget.ConstraintLayout>