<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:id="@id/container_transfer_receiver_action" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:elevation="16.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:id="@id/bottom_sheet_transfer_receiver_selector" android:background="@drawable/background_backdrop_toolbar_divider_white" android:paddingTop="@dimen/_12dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:elevation="8.0dip" app:behavior_hideable="true" app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
        <TextView android:id="@id/text_to_selector" android:paddingTop="8.0dip" android:paddingBottom="@dimen/_8dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/transfer_to_selector_label" android:layout_marginStart="@dimen/_16dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/GilroyTitle" />
        <TextView android:id="@id/text_to_card" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/transfer_to_selector_card" android:drawableLeft="@drawable/ic_transfer_setup_to_selector_card" app:layout_constraintStart_toStartOf="@id/text_to_selector" app:layout_constraintTop_toBottomOf="@id/text_to_selector" style="@style/TransferSetupSelectorToItem" />
        <TextView android:id="@id/text_to_acc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/transfer_to_selector_account" android:drawableLeft="@drawable/ic_transfer_setup_to_selector_account" app:layout_constraintStart_toStartOf="@id/text_to_card" app:layout_constraintTop_toBottomOf="@id/text_to_card" style="@style/TransferSetupSelectorToItem" />
        <TextView android:id="@id/text_to_cancel" android:paddingBottom="@dimen/_24dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/transfer_to_selector_cancel" android:drawableLeft="@drawable/ic_transfer_setup_to_selector_cancel" app:layout_constraintStart_toStartOf="@id/text_to_acc" app:layout_constraintTop_toBottomOf="@id/text_to_acc" style="@style/TransferSetupSelectorToItem" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <FrameLayout android:id="@id/dim" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" style="@style/Dim" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>