<?xml version="1.0" encoding="utf-8"?>
<merge android:id="@id/backdrop" android:layout_width="fill_parent" android:layout_height="fill_parent" android:elevation="@dimen/_4dp" app:layout_constraintTop_toTopOf="parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatTextView android:id="@id/text_label_from" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/transfers_internal_from_summary" android:layout_marginStart="14.0dip" android:layout_marginEnd="@dimen/_12dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/GilroyTitle" />
    <androidx.recyclerview.widget.RecyclerView android:id="@id/list_sources" android:tag="@string/optional_backdrop_view_tag" android:paddingTop="@dimen/_4dp" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginTop="@dimen/_8dp" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/text_label_from" />
    <androidx.appcompat.widget.AppCompatImageView android:id="@id/empty_cardlist_img" android:visibility="gone" android:layout_width="164.0dip" android:layout_height="134.0dip" android:layout_marginTop="84.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/text_label_from" app:srcCompat="@drawable/ic_illustration_wallet_with_account" />
    <androidx.appcompat.widget.AppCompatTextView android:gravity="center" android:id="@id/empty_cardlist_label" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="62.0dip" android:maxWidth="264.0dip" android:text="@string/transfers_empty_list_label" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/empty_cardlist_img" style="@style/GilroyBody" />
</merge>